stop the terrible video overflow, side-scrolling, and disappearing h2 from following section

--- a/product-landing-pages/on-call/style.css
+++ b/product-landing-pages/on-call/style.css
@@ -311,19 +311,16 @@ section {
 }
 
 video {
-  position: absolute;
-  /* top: 0; */
-
-  width: 80vw;
-  height: auto;
+  width: 100vw;
+  display: block;
 
   border: 2px solid green;
 }
 .video-wrapper {
-  position: relative;
-  padding: 0;
   border: 2px red solid;
-  width: auto;
+  width: 100vw;
+  aspect-ratio: 16/9;
+  margin: 0 auto;
 }
 @media (min-width: 450px) {
   .section-video {
